// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordStrength component rendering renders password-strength 1`] = `
<div>
  <CommonForm
    className=""
    error="some-password-error"
    inputClassName="col-md-4"
    label="Password"
    required={false}
    tooltipHelp={null}
    touched={true}
  >
    <ReactPasswordStrength
      changeCallback={[Function]}
      className=""
      defaultValue=""
      inputProps={
        Object {
          "autoComplete": "new-password",
          "className": "some-class-name",
          "id": "some-id",
          "name": "some-name",
        }
      }
      minLength={6}
      minScore={2}
      namespaceClassName="ReactPasswordStrength"
      scoreWords={
        Array [
          "Weak",
          "Medium",
          "Normal",
          "Strong",
          "Very strong",
        ]
      }
      tooShortWord="Too short"
      userInputs={Array []}
    />
  </CommonForm>
</div>
`;

exports[`PasswordStrength component rendering renders password-strength with password-confirmation 1`] = `
<div>
  <CommonForm
    className=""
    error="some-password-error"
    inputClassName="col-md-4"
    label="Password"
    required={false}
    tooltipHelp={null}
    touched={true}
  >
    <ReactPasswordStrength
      changeCallback={[Function]}
      className=""
      defaultValue=""
      inputProps={
        Object {
          "autoComplete": "new-password",
          "className": "some-class-name",
          "id": "some-id",
          "name": "some-name",
        }
      }
      minLength={6}
      minScore={2}
      namespaceClassName="ReactPasswordStrength"
      scoreWords={
        Array [
          "Weak",
          "Medium",
          "Normal",
          "Strong",
          "Very strong",
        ]
      }
      tooShortWord="Too short"
      userInputs={Array []}
    />
  </CommonForm>
  <CommonForm
    className=""
    error="some-password-confirmation-error"
    inputClassName="col-md-4"
    label="Verify"
    required={false}
    tooltipHelp={null}
    touched={true}
  >
    <input
      className="form-control"
      id="password_confirmation"
      name="user[password_confirmation]"
      onChange={[Function]}
      type="password"
    />
  </CommonForm>
</div>
`;

exports[`PasswordStrength component rendering renders password-strength with unmatched password-confirmation 1`] = `
<div>
  <CommonForm
    className=""
    error="some-password-error"
    inputClassName="col-md-4"
    label="Password"
    required={false}
    tooltipHelp={null}
    touched={true}
  >
    <ReactPasswordStrength
      changeCallback={[Function]}
      className=""
      defaultValue=""
      inputProps={
        Object {
          "autoComplete": "new-password",
          "className": "some-class-name",
          "id": "some-id",
          "name": "some-name",
        }
      }
      minLength={6}
      minScore={2}
      namespaceClassName="ReactPasswordStrength"
      scoreWords={
        Array [
          "Weak",
          "Medium",
          "Normal",
          "Strong",
          "Very strong",
        ]
      }
      tooShortWord="Too short"
      userInputs={Array []}
    />
  </CommonForm>
  <CommonForm
    className=""
    error="Passwords do not match"
    inputClassName="col-md-4"
    label="Verify"
    required={false}
    tooltipHelp={null}
    touched={true}
  >
    <input
      className="form-control"
      id="password_confirmation"
      name="user[password_confirmation]"
      onChange={[Function]}
      type="password"
    />
  </CommonForm>
</div>
`;

exports[`PasswordStrength component rendering renders password-strength with user-input-ids 1`] = `
<div>
  <CommonForm
    className=""
    error="some-password-error"
    inputClassName="col-md-4"
    label="Password"
    required={false}
    tooltipHelp={null}
    touched={true}
  >
    <ReactPasswordStrength
      changeCallback={[Function]}
      className=""
      defaultValue=""
      inputProps={
        Object {
          "autoComplete": "new-password",
          "className": "some-class-name",
          "id": "some-id",
          "name": "some-name",
        }
      }
      minLength={6}
      minScore={2}
      namespaceClassName="ReactPasswordStrength"
      scoreWords={
        Array [
          "Weak",
          "Medium",
          "Normal",
          "Strong",
          "Very strong",
        ]
      }
      tooShortWord="Too short"
      userInputs={
        Array [
          "input1",
          "input2",
        ]
      }
    />
  </CommonForm>
</div>
`;

exports[`PasswordStrength component triggering should trigger updatePassword 1`] = `
Array [
  Array [
    "some-value",
  ],
]
`;

exports[`PasswordStrength component triggering should trigger updatePasswordConfirmation 1`] = `
Array [
  Array [
    "some-value",
  ],
]
`;
